2006-03-13  Rajesh Ranjan  <rranjan@redhat.com>

	* configure.ac: Added Hindi (hi_IN) to ALL_LINGUAS.

2006-03-12  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.ac: Added Italian (it) to ALL_LINGUAS.

2006-03-11  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.ac: Added Portuguese (pt) to ALL_LINGUAS.

2006-03-09  Ahmad Riza H Nst  <rizahnst@id.gnome.org>

	* po/id.po: Added Indonesian Translation
	* configure.ac: Added id in to ALL_LINGUAS line

2006-03-06  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Handle FC5 Xsession path change

2006-03-06  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Move sabayon.schema to EXTRA_DIST

2006-02-23  Inaki Larranaga  <dooteo@euskalgnu.org>

	* configure.ac: Added "eu" to ALL_LINGUAS.

2006-02-19  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.ac: Added "ku" to ALL_LINGUAS.

2006-02-16  Kang Jeong-Hee  <keizie@gmail.co>
	
	* configure.in: Added "ko" to ALL_LINGUAS.

2006-01-31  Elijah Newren  <newren gmail com>

	* configure.ac:
	Post release version bump to 2.12.4

==================== 2.12.3 ====================
	
2006-01-31  Elijah Newren  <newren gmail com>

	* NEWS: 2.12.3 release

2006-01-27  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_HK" "zh_TW" to ALL_LINGUAS.

2006-01-24  Clytie Siddall <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.
	
	2005-12-30  Slobodan D. Sredojevic  <ssl@uns.ns.ac.yu>

	* configure.ac: Add 'sr' and 'sr@Latn' to ALL_LINGUAS

2005-12-28  William Lachance <wrlach@gmail.com>

	* configure.ac lib/config.py.in lib/Makefile.am: 
	Don't assume that the Xnest binary is '/usr/X11R6/bin/Xnest':
	detect its location automatically. Also make configure fail if
	we can't find it, since it no longer has a canonical location.

2005-12-20  Ankit Patel  <ankit644@yahoo.com>

        * configure.ac: Added 'gu' to ALL_LINGUAS.

2005-12-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>
