@@ -1,3 +1,9 @@
+2006-03-22  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.ac:
+	Add support for Frugalware Linux
+	Patch from Alex Smith <alex.extreme2@gmail.com>
+
 2006-03-13  Rajesh Ranjan  <rranjan@redhat.com>
 
 	* configure.ac: Added Hindi (hi_IN) to ALL_LINGUAS.
